--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,24 @@
     font-family: Minor;
     color: #d41024;
 }
+
+/* ----------------------------------------------------------------------------------------- */
+/* Telas Pequenas */
+@media (min-width: 249px) and (max-width: 480px) 
+{
+
+}
+
+/* ----------------------------------------------------------------------------------------- */
+/* Telas Médias */
+@media (min-width: 481px)  and (max-width: 1024px) 
+{
+
+}
+
+/* ----------------------------------------------------------------------------------------- */
+/* Telas Grandes */
+@media screen and (min-width: 1024px) 
+{
+
+}
